# GlobeVPN

./: .gitignore  Cargo.toml  server.conf  server_setup.sh
src/: ami.rs  arguments.rs  ec2_instance.rs  instance_launches.rs  key_pairs.rs  main.rs  manage_directory.rs  openvpn.rs  regions.rs  security_groups.rs  template.ovpn
