[package]
name = "aws"
version = "0.1.0"
edition = "2021"

[dependencies]
public-ip = "*"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [dependencies]
# aws-config = "*"
# aws-sdk-ec2 = "*"
# tokio = { version = "1", features = ["full"] }
[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.aws-config]
version = "0.47.0"

[dependencies.aws-sdk-ec2]
version = "0.17.0"

[dependencies.aws-types]
version = "0.47.0"

[dependencies.structopt]
version = "0.3"
default-features = false
