[package]
name = "aws"
version = "0.1.0"
edition = "2021"

[dependencies]
public-ip = "*"
clap = { version = "3.2.22", features = ["derive", "cargo"] }

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [dependencies]
# aws-config = "*"
# aws-sdk-ec2 = "*"
# tokio = { version = "1", features = ["full"] }
[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.aws-config]
version = "0.48.0"

[dependencies.aws-sdk-ec2]
version = "0.18.0"

[dependencies.aws-types]
version = "0.48.0"

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.uuid]
version = "1.1.2"
features = [
	"v4", # Lets you generate random UUIDs
	"fast-rng", # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs

]
