[package]
name = "globevpn"
version = "0.1.0"
edition = "2021"
authors = ["Tommaso Thea"]
description = """
GlobeVPN, connect to any AWS region in a minute.
"""

[dependencies]
clap = { version = "3.2.22", features = ["derive", "cargo"] }

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.aws-config]
version = "0.49.0"

[dependencies.aws-sdk-ec2]
version = "0.19.0"

[dependencies.aws-types]
version = "0.49.0"

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.uuid]
version = "1.1.2"
features = [
	"v4", # Lets you generate random UUIDs
	"fast-rng", # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs

]
